# ros2-yolov8-template

./: LICENSE  README.md
template_recognition/: CMakeLists.txt  package.xml
template_recognition/launch/: launch_yolov8.launch.py
template_recognition/scripts/: yolov8_ros2_pt.py  yolov8_ros2_subscriber.py
yolov8_template_msgs/: CMakeLists.txt  package.xml
yolov8_template_msgs/msg/: InferenceResult.msg  Yolov8Inference.msg
